fix sub componet alignment

--- a/styles/subscribe.module.scss
+++ b/styles/subscribe.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  // width: 100%;
 
   @include mobileLarge {
     // width: 20em;
@@ -51,7 +51,7 @@
   }
 
   button {
-    // width: 90%;
+    width: 20.375em;
     color: $white;
     height: 2.7rem;
     padding: 0.6em 0.9em;
@@ -77,7 +77,7 @@
     }
 
     @include mobileLarge {
-      width: 100%;
+      width: 20.375em;
     }
   }
 }
@@ -92,10 +92,8 @@
     }
 
     &__formBox {
-      width: 40%;
-
       input {
-        width: 100%;
+        width: 25em;
       }
     }
 
